add_executable(test_client_close test_client_close.cc)
target_link_libraries(test_client_close wallenetStatic wallesysStatic)

add_executable(echo_client echo_client.cc)
target_link_libraries(echo_client wallenetStatic wallesysStatic)

add_executable(echo_server echo_server.cc)
target_link_libraries(echo_server wallenetStatic wallesysStatic)

add_executable(test_service test_service.cc)
target_link_libraries(test_service wallenetStatic wallesysStatic)

add_executable(test_service_client test_service_client.cc)
target_link_libraries(test_service_client wallenetStatic wallesysStatic)

add_executable(signal_test signal_test.cc)
target_link_libraries(signal_test wallenetStatic wallesysStatic)


add_executable(test_loop test_loop.cc)
target_link_libraries(test_loop wallenetStatic)