add_executable(config_utest Config_utest.cc)
target_link_libraries(config_utest wallesysStatic walleunitStatic)

add_executable(stringutil_utest StringUtil_utest.cc)
target_link_libraries(stringutil_utest wallesysStatic walleunitStatic)

add_executable(test_log test_log.cc)
target_link_libraries(test_log wallesysStatic)

add_executable(test_processinfo test_processinfo.cc)
target_link_libraries(test_processinfo wallesysStatic)
add_executable(test_md5 test_md5.cc)
target_link_libraries(test_md5 wallesysStatic)

add_executable(test_random test_random.cc)
target_link_libraries(test_random wallesysStatic)

add_executable(test_string_to_sec test_string_to_sec.cc)
target_link_libraries(test_string_to_sec wallesysStatic)


add_executable(test_cmdline test_cmdline.cc)
target_link_libraries(test_cmdline wallesysStatic)

add_executable(test_config_mem test_config_mem.cc)
target_link_libraries(test_config_mem wallesysStatic)

add_executable(asynclog_test asynclog_test.cc)
target_link_libraries(asynclog_test wallesysStatic)